# s3-parquet-to-postgres

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  env.app
local/: config.yml  docker-compose.yml  env.db  env.localhost  env.localstack  reset-local.sh  todo
local/docker-entrypoint-initdb.d/: 000_create_table.sh  001_testing_db.sh
local/localstack/bucket_data/customer-orders-parquet/: order_01.parquet  order_03.parquet
local/localstack/bucket_data/deliveries-parquet/parent_dir/subdir_a/: 001.parquet  (+1 more)
local/localstack/bucket_data/types-parquet/: 001.parquet  PARQUET_DUCKDB.md  full.csv  full.parquet
src/: cmd_args.rs  config.rs  converters.rs  db.rs  display_schema.rs  main.rs  parquet_ops.rs  runner.rs  s3_download.rs  test_setup.rs  work_lists.rs
tests/testdata/unit-tests/: good.yml  missing-fields.yml
tests/testdata/unit-tests/parquet_ops/: README.md  just_contains.txt  order_00.parquet  order_02.parquet  order_04.parquet  order_05.parquet
tests/testdata/unit-tests/runner/test_run_customer_orders_constraint_violation/: config.yml
tests/testdata/unit-tests/runner/test_run_happy_path_customer_orders/: config.yml
tests/testdata/unit-tests/runner/test_run_nested_s3_paths/: config.yml
tests/testdata/unit-tests/runner/test_run_supported_parquet_data_types/: config.yml
tests/testdata/unit-tests/work_lists/empty_dir/: .keep
tests/testdata/unit-tests/work_lists/mark_completed_exists/: todo  wip
tests/testdata/unit-tests/work_lists/mark_completed_new/: todo
tests/testdata/unit-tests/work_lists/todo_only/: todo
tests/testdata/unit-tests/work_lists/wip_no_whitespace_or_comments/: todo  wip
tests/testdata/unit-tests/work_lists/wip_with_whitespace_and_comments/: wip
(+5 files in other folders)
