[package]
name = "s3-parquet-to-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.51.0"
chrono = "0.4.38"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
parquet = "53.0.0"
pin-utils = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }

[dev-dependencies]
assert_fs = "1.1.2"
csv = "1.3.0"
const_format = "0.2.33"
lazy_static = "1.5.0"
once_cell = "1.19.0"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
